# lsm6dsox-pid-lib

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TechnicalTest.md
HAL/: CMakeLists.txt
HAL/DummyHal/: hal_spi.c  hal_spi.h
Lib/: CMakeLists.txt
Src/: CMakeLists.txt  lsm6-imu.c  lsm6-imu.h
Test/: CMakeLists.txt  ut_lsm6-imu.cpp
